# Amethyst

./: .gitattributes  .gitignore  FIXES_SUMMARY.md  LICENSE  README.md  exewarning.txt  license.txt  package-lock.json  package.json
.github/workflows/: node.js.yml
public/: app.js  index.html  styles.css
qt-ui/: CMakeLists.txt  CMakePresets.json  README.md  build.bat  build.sh  install.js  install.py
qt-ui/qml/: AccountsPage.qml  DownloadDialog.qml  HomePage.qml  SettingsPage.qml  VersionsPage.qml  main.qml
qt-ui/resources/: amaranth.qrc
qt-ui/src/: amaranthlauncher.cpp  amaranthlauncher.h  apiclient.cpp  apiclient.h  main.cpp
src/: cli.js  config.js  electron.js  main.js  preload.js  server.js
src/launcher/: accounts.js  crashAnalyzer.js  curseforge.js  discordRpc.js  downloadQueue.js  downloader.js  drives.js  folders.js  forgeInstaller.js  instances.js  javaLocator.js  javaManager.js  logs.js  microsoftAuth.js  minecraft.js  minecraftPaths.js  modLoaders.js  modloader.js  modloaders.js  modpacks.js  modpacksLoaders.js  modrinth.js  mojangApi.js  news.js  os.js  rules.js  runtime.js  skins.js  store.js
tauri-ui/: README.md  package.json
tauri-ui/src/: index.html
tauri-ui/src-tauri/: Cargo.toml  tauri.conf.json
tauri-ui/src-tauri/src/: main.rs
test/: crashAnalyzer.test.js  electron-packaging.test.js  features.test.js  forge-skins.test.js  mod-loading.test.js  modloader.test.js  modpacks-auth.test.js  resourcepacks.test.js  rules.test.js  startup.test.js
