[package]
name = "amethyst"
version = "0.1.0"
description = "A dark purple Minecraft vanilla launcher"
authors = ["Amethyst Contributors"]
license = "MIT"
repository = "https://github.com/MinLOL12/Amethyst"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "window-close", "window-minimize", "window-maximize", "window-unmaximize", "window-start-dragging"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
notify = "5"
dirs = "4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
